update css to allow wrapping to correct bug

--- a/src/sass/partials/_notes-files-add.scss
+++ b/src/sass/partials/_notes-files-add.scss
@@ -334,6 +334,7 @@
 
               span {
                 display: flex;
+                flex-wrap: wrap;
               }
             }
           }
